vpc-sample/output/VpcSampleStack.template.json
{
  "Resources": {
    "devsandboxecstestvpc9930BA8C": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.1.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/Resource"
      }
    },
    "devsandboxecstestvpcpub1Subnet1Subnet607C6CD9": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.1.0.0/24",
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "pub1"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet1/Subnet"
      }
    },
    "devsandboxecstestvpcpub1Subnet1RouteTable28990B80": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet1/RouteTable"
      }
    },
    "devsandboxecstestvpcpub1Subnet1RouteTableAssociation5B0E3098": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcpub1Subnet1RouteTable28990B80"
        },
        "SubnetId": {
          "Ref": "devsandboxecstestvpcpub1Subnet1Subnet607C6CD9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet1/RouteTableAssociation"
      }
    },
    "devsandboxecstestvpcpub1Subnet1DefaultRouteD0A025F2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcpub1Subnet1RouteTable28990B80"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "devsandboxecstestvpcIGWF2460846"
        }
      },
      "DependsOn": [
        "devsandboxecstestvpcVPCGWD59AF2B2"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet1/DefaultRoute"
      }
    },
    "devsandboxecstestvpcpub1Subnet1EIP28F6791C": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet1/EIP"
      }
    },
    "devsandboxecstestvpcpub1Subnet1NATGateway09E392FE": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "devsandboxecstestvpcpub1Subnet1EIP28F6791C",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "devsandboxecstestvpcpub1Subnet1Subnet607C6CD9"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet1/NATGateway"
      }
    },
    "devsandboxecstestvpcpub1Subnet2Subnet58CBDB89": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.1.1.0/24",
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "pub1"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet2/Subnet"
      }
    },
    "devsandboxecstestvpcpub1Subnet2RouteTable844C54CC": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet2/RouteTable"
      }
    },
    "devsandboxecstestvpcpub1Subnet2RouteTableAssociationAF2C315E": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcpub1Subnet2RouteTable844C54CC"
        },
        "SubnetId": {
          "Ref": "devsandboxecstestvpcpub1Subnet2Subnet58CBDB89"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet2/RouteTableAssociation"
      }
    },
    "devsandboxecstestvpcpub1Subnet2DefaultRouteB5027136": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcpub1Subnet2RouteTable844C54CC"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "devsandboxecstestvpcIGWF2460846"
        }
      },
      "DependsOn": [
        "devsandboxecstestvpcVPCGWD59AF2B2"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet2/DefaultRoute"
      }
    },
    "devsandboxecstestvpcpub1Subnet2EIP4853F9B8": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet2/EIP"
      }
    },
    "devsandboxecstestvpcpub1Subnet2NATGateway3190D7DF": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "devsandboxecstestvpcpub1Subnet2EIP4853F9B8",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "devsandboxecstestvpcpub1Subnet2Subnet58CBDB89"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub1Subnet2/NATGateway"
      }
    },
    "devsandboxecstestvpcpub2Subnet1SubnetDC2EA782": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.1.2.0/24",
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "pub2"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub2Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub2Subnet1/Subnet"
      }
    },
    "devsandboxecstestvpcpub2Subnet1RouteTable923795F1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub2Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub2Subnet1/RouteTable"
      }
    },
    "devsandboxecstestvpcpub2Subnet1RouteTableAssociation83361F13": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcpub2Subnet1RouteTable923795F1"
        },
        "SubnetId": {
          "Ref": "devsandboxecstestvpcpub2Subnet1SubnetDC2EA782"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub2Subnet1/RouteTableAssociation"
      }
    },
    "devsandboxecstestvpcpub2Subnet1DefaultRoute13708CEF": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcpub2Subnet1RouteTable923795F1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "devsandboxecstestvpcIGWF2460846"
        }
      },
      "DependsOn": [
        "devsandboxecstestvpcVPCGWD59AF2B2"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub2Subnet1/DefaultRoute"
      }
    },
    "devsandboxecstestvpcpub2Subnet2Subnet74D428B9": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.1.3.0/24",
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "pub2"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub2Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub2Subnet2/Subnet"
      }
    },
    "devsandboxecstestvpcpub2Subnet2RouteTableAA57D50A": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub2Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub2Subnet2/RouteTable"
      }
    },
    "devsandboxecstestvpcpub2Subnet2RouteTableAssociation594056B4": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcpub2Subnet2RouteTableAA57D50A"
        },
        "SubnetId": {
          "Ref": "devsandboxecstestvpcpub2Subnet2Subnet74D428B9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub2Subnet2/RouteTableAssociation"
      }
    },
    "devsandboxecstestvpcpub2Subnet2DefaultRouteA04FFF80": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcpub2Subnet2RouteTableAA57D50A"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "devsandboxecstestvpcIGWF2460846"
        }
      },
      "DependsOn": [
        "devsandboxecstestvpcVPCGWD59AF2B2"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/pub2Subnet2/DefaultRoute"
      }
    },
    "devsandboxecstestvpcprv1Subnet1Subnet19368A3C": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.1.4.0/24",
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "prv1"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv1Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv1Subnet1/Subnet"
      }
    },
    "devsandboxecstestvpcprv1Subnet1RouteTable6C9ECCED": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv1Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv1Subnet1/RouteTable"
      }
    },
    "devsandboxecstestvpcprv1Subnet1RouteTableAssociationE768249A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcprv1Subnet1RouteTable6C9ECCED"
        },
        "SubnetId": {
          "Ref": "devsandboxecstestvpcprv1Subnet1Subnet19368A3C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv1Subnet1/RouteTableAssociation"
      }
    },
    "devsandboxecstestvpcprv1Subnet1DefaultRoute2493B423": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcprv1Subnet1RouteTable6C9ECCED"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "devsandboxecstestvpcpub1Subnet1NATGateway09E392FE"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv1Subnet1/DefaultRoute"
      }
    },
    "devsandboxecstestvpcprv1Subnet2SubnetB0B98818": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.1.5.0/24",
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "prv1"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv1Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv1Subnet2/Subnet"
      }
    },
    "devsandboxecstestvpcprv1Subnet2RouteTable9F4D0B2B": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv1Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv1Subnet2/RouteTable"
      }
    },
    "devsandboxecstestvpcprv1Subnet2RouteTableAssociation0BF52A50": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcprv1Subnet2RouteTable9F4D0B2B"
        },
        "SubnetId": {
          "Ref": "devsandboxecstestvpcprv1Subnet2SubnetB0B98818"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv1Subnet2/RouteTableAssociation"
      }
    },
    "devsandboxecstestvpcprv1Subnet2DefaultRoute8D3A2D1C": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcprv1Subnet2RouteTable9F4D0B2B"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "devsandboxecstestvpcpub1Subnet2NATGateway3190D7DF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv1Subnet2/DefaultRoute"
      }
    },
    "devsandboxecstestvpcprv2Subnet1Subnet3AC2283D": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.1.6.0/24",
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "prv2"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv2Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv2Subnet1/Subnet"
      }
    },
    "devsandboxecstestvpcprv2Subnet1RouteTable7D4F22E0": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv2Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv2Subnet1/RouteTable"
      }
    },
    "devsandboxecstestvpcprv2Subnet1RouteTableAssociationDA0BED13": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcprv2Subnet1RouteTable7D4F22E0"
        },
        "SubnetId": {
          "Ref": "devsandboxecstestvpcprv2Subnet1Subnet3AC2283D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv2Subnet1/RouteTableAssociation"
      }
    },
    "devsandboxecstestvpcprv2Subnet1DefaultRoute5A1D9255": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcprv2Subnet1RouteTable7D4F22E0"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "devsandboxecstestvpcpub1Subnet1NATGateway09E392FE"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv2Subnet1/DefaultRoute"
      }
    },
    "devsandboxecstestvpcprv2Subnet2SubnetDEB0E585": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.1.7.0/24",
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "prv2"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv2Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv2Subnet2/Subnet"
      }
    },
    "devsandboxecstestvpcprv2Subnet2RouteTableDDACEFCF": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv2Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv2Subnet2/RouteTable"
      }
    },
    "devsandboxecstestvpcprv2Subnet2RouteTableAssociationDC2A054B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcprv2Subnet2RouteTableDDACEFCF"
        },
        "SubnetId": {
          "Ref": "devsandboxecstestvpcprv2Subnet2SubnetDEB0E585"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv2Subnet2/RouteTableAssociation"
      }
    },
    "devsandboxecstestvpcprv2Subnet2DefaultRouteBF043B97": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "devsandboxecstestvpcprv2Subnet2RouteTableDDACEFCF"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "devsandboxecstestvpcpub1Subnet2NATGateway3190D7DF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/prv2Subnet2/DefaultRoute"
      }
    },
    "devsandboxecstestvpcIGWF2460846": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcSampleStack/dev-sandbox-ecstest-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/IGW"
      }
    },
    "devsandboxecstestvpcVPCGWD59AF2B2": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "devsandboxecstestvpc9930BA8C"
        },
        "InternetGatewayId": {
          "Ref": "devsandboxecstestvpcIGWF2460846"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/dev-sandbox-ecstest-vpc/VPCGW"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAAE0VPywrCMBD8Fu8xtSKiN6WIeJFSpfd0u2K03UiyUaT032185TSzM7PDbiqXCzkZrdTDjaG+Jh0Yi7I7sIKrKNAZbwFFZsix9cAiO1FUTzQYtWZtqBehAWEqu/IGwSrzTOS+ajQcfEX4Xo2sMJ7xqKoGox61tXMGtArF/3Agm10eYK94qxgf6ilyq+8DjcU7YrQD/wU+l3ynNQ9/nVsk7ntBpkZ5cck9ncl0LtPRxWk9tp5YtyiLD74AjASs1yABAAA="
      },
      "Metadata": {
        "aws:cdk:path": "VpcSampleStack/CDKMetadata/Default"
      },
      "Condition": "CDKMetadataAvailable"
    }
  },
  "Conditions": {
    "CDKMetadataAvailable": {
      "Fn::Or": [
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "af-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-northwest-1"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "sa-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-2"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-2"
              ]
            }
          ]
        }
      ]
    }
  }
}
